[project]
name = "roboglance"
version = "0.1.0"
description = "The backend API of RoboGlance."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]>=0.139.0",
]

[tool.fastapi]
entrypoint = "app.main:app"

[dependency-groups]
dev = [
    "ruff>=0.15.22",
]
