[project]
name = "roboglance"
version = "0.1.0"
description = "The backend API of RoboGlance."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]>=0.139.0",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]

[tool.uv]
required-version = ">=0.11.29"

[tool.fastapi]
entrypoint = "app.main:app"
